# gohome

./: .env  .envrc  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile-arm  README.md  Taskfile.yml  build.rs  cosign.key  cosign.pub  devenv.nix  docker-compose.yml  entrypoint.sh  gohome.db
.cargo/: Taskfile.yml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  conventional-commits.yaml  release.yaml
cue/: goreleaser.cue
cue.mod/: module.cue
scripts/: cargo-update.sh  install-toml.sh  local-run.sh
src/: db.rs  handlers.rs  lib.rs  main.rs  model.rs  render.rs  routes.rs
static/: base.css
templates/: all.hbs  base.hbs  delete.hbs  detail.hbs  help.hbs  home.hbs  success.hbs
tests/: integration_test.rs
x86_64/: Dockerfile
